# rust-docs-mcp-server

./: .dockerignore  .gitignore  ARCHITECTURE_PLAN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.prebuilt  README.md  all_crates.txt  create_hnsw_index.sql  docker-entrypoint.sh  existing_crates.txt  proxy-config.json  run_mcp_server.sh  schema.sql  status.sh  test_db_search.py  test_direct_search.py  test_search.rs  test_search_quality.py  test_stdio.sh  update_schema_3072.sql
.github/workflows/: publish-all.yml  publish-binaries.yml  publish-container.yml
scripts/: README.md  backfill_underdocumented.sh  deployment_checklist.sh  populate_individual.sh  populate_missing.sh  populate_monitor.sh  test-docker-build.sh
sql/: README.md  schema.sql
sql/migrations/: migrate_to_3072.sql
src/: database.rs  doc_loader.rs  doc_loader_simple.rs  embeddings.rs  error.rs  lib.rs  main.rs  server.rs
tests/python/: test_axum_content.py
