[package]
name = "rustdocs_mcp_server"
version = "1.3.1"
edition = "2021"

[lib]
name = "rustdocs_mcp_server"
path = "src/lib.rs"

# Add a second binary target for the proxy
[[bin]]
name = "rustdocs_mcp_server"
path = "src/main.rs"

[[bin]]
name = "populate_db"
path = "src/bin/populate_db.rs"

[[bin]]
name = "populate_all"
path = "src/bin/populate_all.rs"

[[bin]]
name = "backfill_versions"
path = "src/bin/backfill_versions.rs"

[[bin]]
name = "debug_axum_search"
path = "src/bin/debug_axum_search.rs"

[[bin]]
name = "debug_axum_sql"
path = "src/bin/debug_axum_sql.rs"

[[bin]]
name = "analyze_vector_search"
path = "src/bin/analyze_vector_search.rs"



[dependencies]
rmcp = { version = "0.1.5", features = ["tower", "transport-io", "transport-sse-server", "macros", "server"] } # Add macros, server, schemars
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util"] }
reqwest = { version = "0.12.12", features = ["json"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
walkdir = "2.5.0"
scraper = "0.23.1"
ndarray = { version = "0.16.1", features = ["serde"] } # Enable serde feature
async-openai = "0.28.0"
# async-trait = "0.1.88" # Removed, likely no longer needed
async-trait = "0.1.88"
futures = "0.3"
bincode = { version = "2.0.1", features = ["serde"] } # Enable serde integration
tiktoken-rs = "0.6.0"
# Configure cargo crate to vendor openssl to avoid system mismatches
# cargo = { version = "0.87.1", default-features = false, features = ["vendored-openssl"] }
tempfile = "3.19.1"
anyhow = "1.0.97"
schemars = "0.8.22"
clap = { version = "4.5.34", features = ["cargo", "derive", "env"] }
regex = "1.11.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "uuid"] }
pgvector = { version = "0.4", features = ["sqlx"] }
chrono = "0.4"


# --- Platform Specific Dependencies ---

[target.'cfg(not(target_os = "windows"))'.dependencies]
xdg = { version = "2.5.2", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
dirs = "6.0.0"


# Optimize release builds for size
[profile.release]
opt-level = "z"  # Optimize for size
lto = true         # Enable Link Time Optimization
codegen-units = 1  # Maximize size reduction opportunities
panic = "abort"    # Abort on panic to remove unwinding code
strip = true       # Strip symbols from binary

